--- a/src/bio.html
+++ b/src/bio.html
@@ -17,10 +17,10 @@
     <div class="main-container">
         <header class="header">
             <!-- /**
-        |============================
-        | page logo
-        |============================
-        */ -->
+            |============================
+            | page logo
+            |============================
+            */ -->
             <div><a href="./index.html">
                     <img class="header-image" src="./images/favicon/android-chrome-512x512.png" alt="логотип"></a>
             </div>
@@ -32,22 +32,22 @@
             <nav class="nav">
                 <ul class="navlist">
                     <li class="navitem">
-                        <a href="./biography.html">Біографія</a>
+                        <a href="./bio.html">Біографія</a>
                     </li>
                     <li class="navitem">
-                        <a href="#">Статті</a>
+                        <a href="./articles.html">Статті</a>
                     </li>
                     <li class="navitem">
-                        <a href="#">Семінари</a>
+                        <a href="./seminars.html">Семінари</a>
                     </li>
                     <li class="navitem">
-                        <a href="#">Риболовля з чемпіоном</a>
+                        <a href="fishwithme.html">Риболовля з чемпіоном</a>
                     </li>
                     <li class="navitem">
-                        <a href="#">Гори гайд</a>
+                        <a href="./mountains.html">Гори гайд</a>
                     </li>
                     <li class="navitem">
-                        <a href="#">НХНЛ клуб</a>
+                        <a href="./nxnc.html">НХНЛ клуб</a>
                     </li>
                 </ul>
                 <!-- /**
@@ -111,22 +111,22 @@
     */ -->
                 <ul class="navlist-tablet">
                     <li class="navitem">
-                        <a href="./biography.html">Біографія</a>
+                        <a href="./bio.html">Біографія</a>
                     </li>
                     <li class="navitem">
-                        <a href="#">Статті</a>
+                        <a href="./articles.html">Статті</a>
                     </li>
                     <li class="navitem">
-                        <a href="#">Семінари</a>
+                        <a href="./seminars.html">Семінари</a>
                     </li>
                     <li class="navitem">
-                        <a href="#">Риболовля з чемпіоном</a>
+                        <a href="./fishwithme.html">Риболовля з чемпіоном</a>
                     </li>
                     <li class="navitem">
-                        <a href="#">Гори гайд</a>
+                        <a href="./mountains.html">Гори гайд</a>
                     </li>
                     <li class="navitem">
-                        <a href="#">НХНЛ клуб</a>
+                        <a href="./nxnc.html">НХНЛ клуб</a>
                     </li>
                 </ul>
                 <!-- /**
@@ -156,28 +156,35 @@
                     </button>
 
                     <ul class="mobile-menu">
-                        <li><a href="./biography.html" class="link">Біографія</a></li>
-                        <li><a href="" class="link">Статті</a></li>
-                        <li><a href="" class="link">Семінари</a></li>
-                        <li><a href="" class="link">Риболовля з чемпіоном</a></li>
-                        <li><a href="" class="link">Гори гайд</a></li>
-                        <li><a href="" class="link">НХНЛ клуб</a></li>
-                        <li><a href="" class="link">Замовити тваринні компоненти</a></li>
+                        <li><a href="./index.html" class="link">ГОЛОВНА</a></li>
+                        <li><a href="./bio.html" class="link">Біографія</a></li>
+                        <li><a href="./articles.html" class="link">Статті</a></li>
+                        <li><a href="./seminars.html" class="link">Семінари</a></li>
+                        <li><a href="./fishwithme.html" class="link">Риболовля з чемпіоном</a></li>
+                        <li><a href="./mountains.html" class="link">Гори гайд</a></li>
+                        <li><a href="./nxnc.html" class="link">НХНЛ клуб</a></li>
+                        <li><a href="https://xn--m1aaxj.com/Home/BaitOrder" class="link">Замовити тваринні
+                                компоненти</a></li>
                     </ul>
                 </div>
             </nav>
         </header>
     </div>
-
+    <!-- /**
+|============================
+| PAGE CONTENT
+|============================
+*/ -->
     <div class="main-container">
+        <H1 class="bio-main-title">Олексій Страшний - біографія</H1>
         <div class="bio-wrapper">
             <div>
-                <h1>Олексій Страшний - біографія</h1>
+                <h2>"З риболовлею по життю!"</h2>
             </div>
             <div class=""><img src="./images/bio/bio1.png" alt="portrait"></div>
         </div>
         <div class="bio-wrapper"></div>
-        <h2 class="bio-titles">Юність та освіта</h2>
+        <h3 class="bio-titles">Юність та освіта</h3>
         <p class="bio-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A libero ab iure quae quasi ad
             cupiditate! At
             placeat nostrum quae id ea blanditiis numquam magnam, sed soluta possimus inventore autem.
@@ -186,7 +193,7 @@
             Facere quidem, dolor nam illum modi adipisci maxime reiciendis, sapiente quos praesentium totam beatae
             tempore esse neque. Non, repellendus voluptatum aspernatur dicta maxime ad quae sint, repudiandae
             quaerat culpa inventore.</p>
-        <h2 class="bio-titles">Українські старти</h2>
+        <h3 class="bio-titles">Українські старти</h3>
         <p class="bio-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A libero ab iure quae quasi ad
             cupiditate! At
             placeat nostrum quae id ea blanditiis numquam magnam, sed soluta possimus inventore autem.
@@ -195,7 +202,7 @@
             Facere quidem, dolor nam illum modi adipisci maxime reiciendis, sapiente quos praesentium totam beatae
             tempore esse neque. Non, repellendus voluptatum aspernatur dicta maxime ad quae sint, repudiandae
             quaerat culpa inventore.</p>
-        <h2 class="bio-titles">Перший Чемпіонат світу</h2>
+        <h3 class="bio-titles">Перший Чемпіонат світу</h3>
         <p class="bio-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A libero ab iure quae quasi ad
             cupiditate! At
             placeat nostrum quae id ea blanditiis numquam magnam, sed soluta possimus inventore autem.
@@ -204,7 +211,7 @@
             Facere quidem, dolor nam illum modi adipisci maxime reiciendis, sapiente quos praesentium totam beatae
             tempore esse neque. Non, repellendus voluptatum aspernatur dicta maxime ad quae sint, repudiandae
             quaerat culpa inventore.</p>
-        <h2 class="bio-titles">Співпраця з Флагман</h2>
+        <h3 class="bio-titles">Співпраця з Флагман</h3>
         <p class="bio-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A libero ab iure quae quasi ad
             cupiditate! At
             placeat nostrum quae id ea blanditiis numquam magnam, sed soluta possimus inventore autem.
@@ -213,7 +220,7 @@
             Facere quidem, dolor nam illum modi adipisci maxime reiciendis, sapiente quos praesentium totam beatae
             tempore esse neque. Non, repellendus voluptatum aspernatur dicta maxime ad quae sint, repudiandae
             quaerat culpa inventore.</p>
-        <h2 class="bio-titles">Створення риболовного клубу НХНЛ</h2>
+        <h3 class="bio-titles">Створення риболовного клубу НХНЛ</h3>
         <p class="bio-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A libero ab iure quae quasi ad
             cupiditate! At
             placeat nostrum quae id ea blanditiis numquam magnam, sed soluta possimus inventore autem.
@@ -222,17 +229,23 @@
             Facere quidem, dolor nam illum modi adipisci maxime reiciendis, sapiente quos praesentium totam beatae
             tempore esse neque. Non, repellendus voluptatum aspernatur dicta maxime ad quae sint, repudiandae
             quaerat culpa inventore.</p>
-        <h2 class="bio-titles">Громадська активність</h2>
+        <h3 class="bio-titles">Громадська активність</h3>
         <p class="bio-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A libero ab iure quae quasi ad
             cupiditate! At
             placeat nostrum quae id ea blanditiis numquam magnam, sed soluta possimus inventore autem.
             Molestiae eius itaque mollitia tempora veniam optio ab odio? Ex, tenetur. .</p>
-        <h2 class="bio-titles">Особисте життя</h2>
+        <h3 class="bio-titles">Особисте життя</h3>
         <p class="bio-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A libero ab iure quae quasi ad
             cupiditate! At
             placeat nostrum quae id ea blanditiis numquam magnam, sed soluta possimus inventore autem.
             Molestiae eius itaque mollitia tempora veniam optio ab odio? Ex, tenetur. .</p>
     </div>
+
+    <!-- /**
+    |============================
+    | footer
+    |============================
+    */ -->
     <div class="main-container">
         <hr class="horizontal-line">
         <footer class="footer">
